tests/passing/block.tails
func tests() -> unit:
  let a =
    1

  let b = if true: 1 else: 2
