tests/failing/declare_binding_redefine.tails
func tests() -> unit:
  let a = 1
  let a = 2

  pass
